<resources>
    <string name="app_name">Cocktails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="alcohol">Drinks</string>
    <string name="ingredient">Ingredients</string>
    <string name="enterCocktailName">Enter Name of a Drink</string>
    <string name="no_drink_found">No Drinks found with the given search</string>
    <string name="drinkdetails">Drink Details</string>
    <string name="instructions">Instructions</string>
    <string name="lorem_epsum">kasbdbskbdkandkjakdnaksndandklnalsndla</string>
    <string name="drinkimage">Drink Image</string>
    <string name="ingredients">Ingredients</string>
    <string name="category_drink">Select a Drink Category</string>
    <string name="abv">ABV</string>
    <string name="is_alc">Alcoholic</string>
    <string name="alc_type">Alcohol Type</string>
    <string name="no_drink_details">No Details for the drink has been found</string>
    <string name="essentials">Essentials</string>
</resources>