<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.cocktails.fragment.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_drinkDetailsFragment"
            app:destination="@id/drinkDetailsFragment">

            <argument
                android:name="drinkId"
                app:argType="string"
                android:defaultValue=""
                />

        </action>
    </fragment>
    <fragment
        android:id="@+id/drinksFragment"
        android:name="com.example.cocktails.fragment.drink.DrinksFragment"
        android:label="@string/category_drink" >
        <action
            android:id="@+id/action_drinksFragment_to_categoryDrinkFragment"
            app:destination="@id/categoryDrinkFragment">

            <argument
                android:name="category"
                app:argType="string"
                android:defaultValue=""
                />

        </action>
    </fragment>
    <fragment
        android:id="@+id/ingredientsFragment"
        android:name="com.example.cocktails.fragment.ingredient.IngredientsFragment"
        android:label="@string/essentials"
        tools:layout="@layout/fragment_ingredients" >
        <action
            android:id="@+id/action_ingredientsFragment_to_ingredientDetailsFragment"
            app:destination="@id/ingredientDetailsFragment">

            <argument
                android:name="ingredient"
                app:argType="string"
                android:defaultValue=""
                />

        </action>
    </fragment>
    <fragment
        android:id="@+id/drinkDetailsFragment"
        android:name="com.example.cocktails.fragment.drink_details.DrinkDetailsFragment">

        <argument
            android:name="drinkId"
            app:argType="string"
            android:defaultValue=""
            />

    </fragment>
    <fragment
        android:id="@+id/categoryDrinkFragment"
        android:name="com.example.cocktails.fragment.category_drink.CategoryDrinkFragment"
        android:label="@string/alcohol">

        <argument
            android:name="category"
            app:argType="string"
            android:defaultValue=""
            />

        <action
            android:id="@+id/action_categoryDrinkFragment_to_drinkDetailsFragment"
            app:destination="@id/drinkDetailsFragment">

            <argument
                android:name="drinkId"
                app:argType="string"
                android:defaultValue=""
                />

        </action>

    </fragment>
    <fragment
        android:id="@+id/ingredientDetailsFragment"
        android:name="com.example.cocktails.fragment.ingredient_details.IngredientDetailsFragment"
        android:label="IngredientDetailsFragment">

        <argument
            android:name="ingredient"
            app:argType="string"
            android:defaultValue=""
            />

    </fragment>
</navigation>