<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.cocktails.fragment.ingredient_details.IngredientDetailsViewModel" />

        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_blue">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_blue"
            tools:context=".fragment.ingredient_details.IngredientDetailsFragment">


            <ImageView
                android:id="@+id/no_results_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/not_found_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.4"
                android:background="@color/little_dark_purple"
                android:scaleY="1.5"
                android:scaleX="1.5"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:textAlignment="center"
                android:id="@+id/text_inside"
                android:text="@string/no_drink_details"
                app:layout_constraintTop_toBottomOf="@+id/no_results_found"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/little_dark_purple"
                android:textColor="@color/white"
                android:visibility="gone"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="@{viewmodel.progress ? View.VISIBLE : View.GONE}"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/desc_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/little_dark_purple"
                app:cardElevation="5dp"
                android:padding="@dimen/text_view_padding_8dp"
                android:layout_margin="@dimen/text_view_padding_8dp"
                app:cardCornerRadius="@dimen/text_view_padding_8dp"
                android:visibility="@{!viewmodel.progress ? View.VISIBLE : View.GONE}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/abv_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:text="@string/abv"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />


                        <TextView
                            android:id="@+id/abv_tv"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/alcoholic_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/abv_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:text="@string/is_alc"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />


                        <TextView
                            android:id="@+id/alc_tv"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/alcohol_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/alcoholic_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:text="@string/alc_type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />


                        <TextView
                            android:id="@+id/alc_type_tv"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_view_padding_8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black"
                            />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ing_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/desc_details_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/little_dark_purple"
                android:layout_margin="@dimen/text_view_padding_8dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="@dimen/text_view_padding_8dp"
                android:visibility="@{!viewmodel.progress ? View.VISIBLE : View.GONE}">

                <TextView
                    android:id="@+id/desc_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_view_padding_8dp"
                    app:layout_constraintTop_toBottomOf="@+id/alcohol_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    />

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>